# viness

./: .gitignore  Cargo.toml  README.md  package.json  turbo.json
.changeset/: config.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop-tauri/: package.json  panda.config.ts  park-ui.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/src/: main.css  main.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src/app/app-state/: app-state.ts
apps/desktop-tauri/src/app/landing/: landing.page.tsx
apps/desktop-tauri/src/app/router/: app-route-tree.ts  router-devtool.tsx
apps/desktop-tauri/src/app/setup/: setup.page.tsx
apps/desktop-tauri/src/common/ui-state/: persist-storage.ts  store.ts
apps/desktop-tauri/src/common/util/: fractional-indexing.ts
apps/desktop/src/: main.css  main.tsx  missing-types.d.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/app/: app.tsx
apps/desktop/src/app/layout/: app-content.tsx  app-layout.tsx
apps/desktop/src/app/router/: app-route-tree.ts
apps/desktop/src/backend/: app.controller.ts  app.interface.ts  creative-board.controller.ts  creative-library.controller.ts  index.ts  library.controller.ts
apps/desktop/src/backend/common/: constants.ts  types.ts  (+2 more)
apps/desktop/src/white-board/: page.tsx  route.ts
apps/viness-tools-web/: json-test.js
(+89 files in other folders)
